2009-01-11 [paul]	3.7.0cvs32

	* src/addrindex.c
		clean up some build warnings

2009-01-11 [colin]	3.7.0cvs31

	* src/addrindex.c
		Revert part of patch 3.7.0cvs29 
		This function is used when jpilot
		support is disabled

2009-01-11 [colin]	3.7.0cvs30

	* src/folder.c
		folder_find_child_item_by_name():
		actually use name, not path's basename

2009-01-11 [paul]	3.7.0cvs29

	* src/addrclip.c
	* src/addrindex.c
	* src/addritem.c
	* src/foldersel.h
	* src/folderview.c
	* src/prefs_folder_item.c
		clean up some build warnings

2009-01-11 [paul]	3.7.0cvs28

	* src/gtk/about.c
		don't even mention printing support, assume its
		presence, unless building with GTK+ < 2.10.0

2009-01-10 [colin]	3.7.0cvs27

	* src/codeconv.c
		Fix bug 1811, '[mime] Crash when there's no 
		room for filename's start on the same line'
		When the mimetype of the attachment is very 
		long, there's no room at all to start the 
		name=... parameter on the same line. This
		caused an infinite loop as 0 characters of
		the filename could be appended.
		In such cases, insert linebreak before the
		name parameter.

2009-01-09 [colin]	3.7.0cvs26

	* src/compose.c
	* src/mainwindow.c
	* src/common/utils.c
		Win32: Fix bug 1815, 'Drag-n-Drop of files on 
		Compose Window does not attach'

2009-01-09 [colin]	3.7.0cvs25

	* src/foldersel.c
		Fix bug 1817, 'Changing Themes does not 
		update the pixmaps in "Select folder" 
		dialog box'

2009-01-09 [colin]	3.7.0cvs24

	* src/main.c
		Win32: Fix bug 1816, 'Attaching files with 
		command-line generates error after attaching'

2009-01-09 [paul]	3.7.0cvs23

	* src/gtk/about.c
		forgot this '2009' in last commit

2009-01-09 [paul]	3.7.0cvs22

	* src/*/*.[c,h]
		it's 2009!
		update copyright headers

2009-01-09 [paul]	3.7.0cvs21

	* doc/man/claws-mail.1
		update Team list

2009-01-09 [colin]	3.7.0cvs20

	* src/messageview.c
		Fix bug 1814, 'Windows' WM badly places 
		message view'

2009-01-09 [colin]	3.7.0cvs19

	* src/prefs_themes.c
	* src/stock_pixmap.c