@@ -3694,3 +3694,4 @@
 ( cvs diff -u -r 1.213.2.186 -r 1.213.2.187 src/folder.c;  ) > 3.7.0cvs30.patchset
 ( cvs diff -u -r 1.28.2.39 -r 1.28.2.40 src/addrindex.c;  ) > 3.7.0cvs31.patchset
 ( cvs diff -u -r 1.28.2.40 -r 1.28.2.41 src/addrindex.c;  ) > 3.7.0cvs32.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 tools/fix_date.sh;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 tools/popfile-link.sh;  cvs diff -u -r 1.4.2.4 -r 1.4.2.5 tools/textviewer.sh;  ) > 3.7.0cvs33.patchset
